--- a/src/pages/about-me/AboutMePage.module.scss
+++ b/src/pages/about-me/AboutMePage.module.scss
@@ -1,2 +1,36 @@
+@use "../../assets/sass/Mixins";
+
 .about_me_page {
+  @include Mixins.flex-center;
+  .box_container {
+    width: 60vw;
+    backdrop-filter: blur(7px);
+    background: linear-gradient(
+      45deg,
+      rgba(255, 255, 255, 0.3),
+      rgba(255, 255, 255, 0.8)
+    );
+    border-radius: 10px;
+    @include Mixins.flex-center;
+    flex-flow: column nowrap;
+    padding: 5rem;
+    margin: 3rem;
+    .image_container {
+      background: url("../../assets/images/backgrounds/undraw_Profile_re_4a55.svg");
+      background-size: 100%;
+      background-repeat: no-repeat;
+      width: 100%;
+      height: 500px;
+    }
+    .skills_container {
+      .skill {
+        @include Mixins.flex-center;
+        flex-flow: row;
+        margin: 3rem;
+        > span {
+          margin: 0 1rem;
+        }
+      }
+    }
+  }
 }
