--- a/src/layouts/MainLayout.module.scss
+++ b/src/layouts/MainLayout.module.scss
@@ -20,9 +20,12 @@
   //     }
   //   }
   // }
-
-  .layout_content {
-    //animation: show_content 0.5s forwards;
+  .particles_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
     background: linear-gradient(
         to right top,
         rgba(0, 255, 200, 0.2),
@@ -35,7 +38,12 @@
     background-size: cover;
     width: 100vw;
     height: 100vh;
-
+    //overflow: auto;
+  }
+  .layout_content {
+    h2 {
+      text-align: center;
+    }
     @keyframes show_content {
       from {
         opacity: 0;
