--- a/src/pages/contact/ContactPage.module.scss
+++ b/src/pages/contact/ContactPage.module.scss
@@ -1,6 +1,6 @@
 @use "../../assets/sass/Mixins";
 
-.contact {
+.contact_page {
   @include Mixins.flex-center;
   .box_container {
     width: 60vw;
@@ -16,11 +16,14 @@
     padding: 5rem;
     margin: 3rem;
     .image_container {
-      background: url("../../assets/images/backgrounds/undraw_contact_us_15o2.svg");
-      background-size: 100%;
-      background-repeat: no-repeat;
-      width: 100%;
-      height: 500px;
+      img {
+        width: 100%;
+      }
+      // background: url("../../assets/images/backgrounds/undraw_contact_us_15o2.svg");
+      // background-size: 100%;
+      // background-repeat: no-repeat;
+      // width: 100%;
+      // height: 500px;
     }
     .social_container {
       .social {
