--- a/src/pages/default/DefaultPage.module.scss
+++ b/src/pages/default/DefaultPage.module.scss
@@ -13,20 +13,30 @@
       rgba(255, 255, 255, 0.2),
       rgba(255, 255, 255, 0.7)
     );
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 40% 60%;
     grid-template-rows: 30rem;
-    border: 2px solid red;
+    border-radius: 10px;
+    overflow: hidden;
     .image_container {
       //clip-path: polygon(0 0, 70% 0, 30% 100%, 0 100%);
       background: linear-gradient(
-          to right,
-          transparent,
-          rgba(255, 255, 255, 0.616)
+          to right top,
+          rgba(0, 255, 200, 0.2),
+          rgba(255, 255, 255, 0.5)
         ),
-        url("../../assets/images/parsa-sabbar1.jpg");
-      background-size: cover cover;
+        url("../../assets/images/parsa-sabbar.png");
+      // background: linear-gradient(
+      //     to right,
+      //     rgba(0, 255, 200, 0.2),
+      //     rgba(255, 255, 255, 0.9)
+      //   ),
+      //   url("../../assets/images/parsa-sabbar.png");
+      background-size: 100%;
+      background-repeat: no-repeat;
       width: 100%;
       height: 100%;
+      // border-radius: 50%;
+      overflow: hidden;
       // img {
       //   background: linear-gradient(left to right, red, blue);
       //   filter: grayscale(100%);
@@ -37,6 +47,13 @@
     .content {
       @include Mixins.flex-center;
       flex-flow: column nowrap;
+      .button_container {
+        min-height: 3rem;
+
+        .links {
+          width: 14rem;
+        }
+      }
     }
   }
 }
