--- a/src/pages/experiences/ExperiencesPage.module.scss
+++ b/src/pages/experiences/ExperiencesPage.module.scss
@@ -1,6 +1,6 @@
 @use "../../assets/sass/Mixins";
 
-.about_me_page {
+.experiences_page {
   @include Mixins.flex-center;
   .box_container {
     width: 60vw;
@@ -19,21 +19,14 @@
       img {
         width: 100%;
       }
-      // background: url("../../assets/images/backgrounds/undraw_Profile_re_4a55.svg");
+      // background: url("../../assets/images/backgrounds/undraw_Project_completed_re_pqqq.svg");
       // background-size: 100%;
       // background-repeat: no-repeat;
       // width: 100%;
       // height: 500px;
     }
-    .skills_container {
-      .skill {
-        @include Mixins.flex-center;
-        flex-flow: row;
-        margin: 3rem;
-        > span {
-          margin: 0 1rem;
-        }
-      }
+    .details_container {
+      margin: 5rem 0;
     }
   }
 }
