--- a/src/pages/about-me/AboutMePage.module.scss
+++ b/src/pages/about-me/AboutMePage.module.scss
@@ -1,4 +1,5 @@
 @use "../../assets/sass/Mixins";
+@use "../../assets/sass/Variables";
 
 .about_me_page {
   @include Mixins.flex-center;
@@ -26,12 +27,27 @@
       // height: 500px;
     }
     .skills_container {
+      width: 100%;
       .skill {
         @include Mixins.flex-center;
         flex-flow: row;
         margin: 3rem;
         > span {
           margin: 0 1rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: Variables.$mobile-limit-size) {
+  .about_me_page {
+    .box_container {
+      width: 90vw;
+      padding: 2rem;
+      margin: 1rem;
+      .skills_container {
+        .skill {
+          margin: 3rem 0;
         }
       }
     }
