--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -6,10 +6,13 @@
   border: none;
   color: #efefef;
   box-shadow: 2px 5px 15px gray;
-  padding: 0.5rem 3rem;
+  padding: 0.75rem 3rem;
   border-radius: 5px;
   cursor: pointer;
   background: linear-gradient(to right, #00bfa6, #ff3a85);
+  &:hover {
+    background: linear-gradient(to right, #027e6d, #992451);
+  }
   img {
     margin-right: 0.5rem;
     width: 1rem;
