--- a/src/pages/contact/ContactPage.module.scss
+++ b/src/pages/contact/ContactPage.module.scss
@@ -50,6 +50,7 @@
 @media screen and (max-width: Variables.$mobile-limit-size) {
   .contact_page {
     .box_container {
+      backdrop-filter: none;
       width: 90vw;
       padding: 2rem;
       margin: 1rem;
