--- a/src/pages/default/DefaultPage.module.scss
+++ b/src/pages/default/DefaultPage.module.scss
@@ -8,7 +8,7 @@
   .box_container {
     display: grid;
     width: 60vw;
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(7px);
     background: linear-gradient(
       45deg,
       rgba(255, 255, 255, 0.2),
@@ -59,6 +59,41 @@
         min-height: 4rem;
         .links {
           width: 14rem;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1400px) {
+  .default_page {
+    .box_container {
+      width: 55rem;
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .default_page {
+    .box_container {
+      width: 90vw;
+      grid-template-columns: 100%;
+      backdrop-filter: none;
+      align-items: center;
+      justify-content: center;
+      justify-items: center;
+      grid-template-rows: auto auto;
+      //@include Mixins.flex-center;
+      .image_container {
+        margin: 1rem;
+        width: 15rem;
+        height: 15rem;
+        border-radius: 50%;
+      }
+      .content {
+        .main_info_container {
+          margin-bottom: 2rem;
+          h1 {
+            font-size: 2rem;
+          }
         }
       }
     }
