update about me page

--- a/src/pages/default/DefaultPage.module.scss
+++ b/src/pages/default/DefaultPage.module.scss
@@ -54,6 +54,12 @@
           margin: 0;
           font-size: 2.5rem;
         }
+        h5 {
+          margin: 0;
+          font-weight: normal;
+          font-family: verdana;
+          color: #636363;
+        }
       }
       .button_container {
         min-height: 4rem;
