--- a/src/pages/about-me/AboutMePage.module.scss
+++ b/src/pages/about-me/AboutMePage.module.scss
@@ -29,7 +29,11 @@
     .skills_container {
       width: 100%;
       .skill {
-        @include Mixins.flex-center;
+        display: grid;
+        grid-template-columns: 25% 75%;
+        justify-content: center;
+        align-items: center;
+
         flex-flow: row;
         margin: 3rem;
         > span {
