--- a/src/pages/experiences/ExperiencesPage.module.scss
+++ b/src/pages/experiences/ExperiencesPage.module.scss
@@ -45,9 +45,9 @@
           margin: 3rem 0;
           a {
             text-decoration: none;
-            color: #ff3a85;
+            color: #e04380;
             &:visited {
-              color: #ff3a85;
+              color: #e04380;
             }
           }
         }
