fill experiences page with content

--- a/src/pages/about-me/AboutMePage.module.scss
+++ b/src/pages/about-me/AboutMePage.module.scss
@@ -16,6 +16,9 @@
     flex-flow: column nowrap;
     padding: 5rem;
     margin: 3rem;
+    h3 {
+      margin-top: 3rem;
+    }
     .image_container {
       img {
         width: 100%;
@@ -25,6 +28,9 @@
       // background-repeat: no-repeat;
       // width: 100%;
       // height: 500px;
+    }
+    ul {
+      width: 100%;
     }
     .skills_container {
       width: 100%;
