--- a/src/assets/sass/Main.scss
+++ b/src/assets/sass/Main.scss
@@ -5,6 +5,7 @@ body {
 ::-webkit-scrollbar {
   width: 0.5rem;
   z-index: 1;
+  background-color: white;
 }
 
 ::-webkit-scrollbar-track {
@@ -14,7 +15,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: lightgray;
+  background-color: rgb(185, 185, 185);
   border-radius: 10px;
 }
 
