--- a/src/components/stepper/Stepper.module.scss
+++ b/src/components/stepper/Stepper.module.scss
@@ -19,7 +19,7 @@
       background-color: white;
       //color: lightgray;
       border-radius: 5px;
-      min-width: 12rem;
+      min-width: 14rem;
       padding: 1rem;
       h5 {
         text-align: center;
@@ -31,6 +31,9 @@
         border-radius: 50%;
         border: 2px solid #00bfa6;
       }
+      p {
+        width: 90%;
+      }
       &_after {
         content: "";
         position: absolute;
@@ -41,7 +44,7 @@
       }
       &_right {
         @extend .explain;
-        transform: translateX(8rem);
+        transform: translateX(9rem);
         &::after {
           @extend .explain_after;
           left: -0.5rem;
@@ -49,7 +52,7 @@
       }
       &_left {
         @extend .explain;
-        transform: translateX(-8rem);
+        transform: translateX(-9rem);
         &::after {
           @extend .explain_after;
           right: -0.5rem;
@@ -68,7 +71,7 @@
   .stepper {
     .dot {
       .explain {
-        min-width: 9rem;
+        min-width: 10rem;
         &_right {
           transform: translateX(6rem);
         }
